wall button width fixed on mobile

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -774,7 +774,7 @@ textarea {
 .smallbrownbutton {
   background: #be6957;
   border-radius: 30px;
-  min-width: 150px;
+  width: 150px;
   display: inline-block;
   padding: 8px;
   margin: 8px;
@@ -1069,7 +1069,7 @@ h3#wallname {
     }
 
     .smallbrownbutton {
-      width: 90px;
+      width: 100px;
     }
 }
 
